; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/net/extr_nss_compat.c___nss_compat_setgrent.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/net/extr_nss_compat.c___nss_compat_setgrent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@group = common dso_local global i32 0, align 4
@NS_UNAVAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__nss_compat_setgrent(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @group, align 4
  %8 = call i32 @SET_TERMINATOR(i32 %7, i32* null)
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to i32 ()*
  %11 = call i32 %10()
  %12 = load i32, i32* @NS_UNAVAIL, align 4
  ret i32 %12
}

declare dso_local i32 @SET_TERMINATOR(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
